# FLCounter-2.0

./: CMakeLists.txt  LICENSE  README.md
include/: AbstractStrategy.hpp  AllStrategy.hpp  DataInput.hpp  DataOutput.hpp  DataProcessor.hpp  ExtensionStrategy.hpp  PathIterator.hpp  RecursiveAllStrategy.hpp  RecursiveExtensionStrategy.hpp  StrategyFactory.hpp
src/: AllStrategy.cpp  DataProcessor.cpp  ExtensionStrategy.cpp  PathIterator.cpp  RecursiveAllStrategy.cpp  RecursiveExtensionStrategy.cpp  StrategyFactory.cpp  main.cpp
test/: AllStrategyTest.cpp  ExtensionStrategyTest.cpp  RecursiveAllStrategyTest.cpp  RecursiveExtensionStrategyTest.cpp  StrategyFactoryTest.cpp  runTests.cpp
test/testdata/ExtensionStrategyTestData/: test.xml
test/testdata/RecursiveAllStrategyTestData/: test1
